--- a/q/106976.html
+++ b/q/106976.html
@@ -26,15 +26,51 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>107</td><td>Python 3.12</td><td>240628T140335Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/273834#273834">squarero</a></td></tr>
-<tr d-ix="1"><td>080</td><td>05AB1E</td><td>240917T130442Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/275586#275586">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>162</td><td>JavaScript ES6</td><td>170116T095022Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/106994#106994">Luke</a></td></tr>
-<tr d-ix="3"><td>081</td><td>Perl</td><td>170116T121734Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107005#107005">primo</a></td></tr>
-<tr d-ix="4"><td>112</td><td>Ruby</td><td>170116T131334Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107010#107010">G B</a></td></tr>
-<tr d-ix="5"><td>039</td><td>V</td><td>170116T175622Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107032#107032">DJMcMayh</a></td></tr>
-<tr d-ix="6"><td>061</td><td>Perl + xxd + cut</td><td>170116T171232Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107027#107027">user6213</a></td></tr>
+<tr d-ix="0"><td>140</td><td>Vyxal 3</td><td>240921T163045Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/275675#275675">Ginger</a></td></tr>
+<tr d-ix="1"><td>107</td><td>Python 3.12</td><td>240628T140335Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/273834#273834">squarero</a></td></tr>
+<tr d-ix="2"><td>080</td><td>05AB1E</td><td>240917T130442Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/275586#275586">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>162</td><td>JavaScript ES6</td><td>170116T095022Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/106994#106994">Luke</a></td></tr>
+<tr d-ix="4"><td>081</td><td>Perl</td><td>170116T121734Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107005#107005">primo</a></td></tr>
+<tr d-ix="5"><td>112</td><td>Ruby</td><td>170116T131334Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107010#107010">G B</a></td></tr>
+<tr d-ix="6"><td>039</td><td>V</td><td>170116T175622Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107032#107032">DJMcMayh</a></td></tr>
+<tr d-ix="7"><td>061</td><td>Perl + xxd + cut</td><td>170116T171232Z</td><td><a href="https://codegolf.stackexchange.com/questions/106976/hex-dump-your-source-code/107027#107027">user6213</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.12/" rel="nofollow noreferrer">Python 3.12</a>, <s> 336 </s> <s> 288 </s> <s> 240 </s> <s> 224 </s> <s> 112 </s> <s> 109 </s> 107 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3/" rel="nofollow noreferrer">Vyxal 3</a>, 140 bytes</h1>
+<pre><code>&quot;ṄᵛO∥ƛ₇≥[0:;|n)fHᵛ2ẆfZ₁Ẇƛ₁m×Hʀ4Þ0':+$:ƛtʀ2Þ0}\„47»$ƛh0=['.|nhO)\“ð$+W}'&quot;ṄᵛO∥ƛ₇≥[0:;|n)fHᵛ2ẆfZ₁Ẇƛ₁m×Hʀ4Þ0':+$:ƛtʀ2Þ0}„47»$ƛh0=['.|nhO)“ð$+W}'
+</code></pre>
+<p><a href="https://vyxal.github.io/latest.html#H4sIAAAAAAAACqtWSssvyk0sUbIy0lHKSE1MSS1SslJS0lFKzk9JVbJSilF6uLPl4dbZ_o86lh6b_aip_VHn0mgDK-uaPM00j4dbZxs93NWWFvWoqfHhrjaQfGPu4ekepxpMDs8zULfSVrE6NrvkVIPR4XkGtTExjxrmmZgf2q1ybHaGgW20ul5NXoa_Jkh4zuENKtrhterUswyrVQiLlHSU0vLzS2B-TctJTC9WsoqO1VHKzCsoLYGyy1KLijPz85SslIz1TPQslWoBg5x-sS0BAAA" rel="nofollow noreferrer">Vyxal It Online!</a></p>
+<p>Explanation:</p>
+<pre><code>&quot;...&quot;Ṅ                                                                     # ‎⁡Quote and prepend the source (quine cheese)
+      ᵛO                                                                   # ‎⁢Convert to a list of codepoints
+        ∥                                                                  # ‎⁣Duplicate that list and:
+         ƛ        )                                                        # ‎⁤  For each codepoint of the first copy:
+          ₇≥[                                                              # ‎⁢⁡    If it's &gt;= 256:
+             0:;   f                                                       # ‎⁢⁢      Replace it with two zeros
+                |n)                                                        # ‎⁢⁣    Otherwise don't change it.
+                    Hᵛ2Ẇf                                                  # ‎⁢⁤  For the second copy, convert each codepoint to hexadecimal and group those into bytes.
+                         Z₁Ẇ                                               # ‎⁣⁡Zip those copies as 16-item chunks.
+                            ƛ                                          }   # ‎⁣⁢For each pair of [codepoint, hex representation]:
+                              m                                            # ‎⁣⁣  Take the index of the pair in the list
+                             ₁ ×                                           # ‎⁣⁤  multiply by 16
+                                Hʀ4Þ0                                      # ‎⁤⁡  convert to four hex digits
+                                     ':+                                   # ‎⁤⁢  and append a colon.
+                                        $:                                 # ‎⁤⁣  Copy the pair
+                                          ƛ     }                          # ‎⁤⁤  For the first copy:
+                                           tʀ2Þ0                           # ‎⁢⁡⁡    Pad the hex to two digits
+                                                 „                         # ‎⁢⁡⁢    join with spaces
+                                                  47»                      # ‎⁢⁡⁣    and right-pad with spaces to the width of a line.
+                                                     $ƛ          )         # ‎⁢⁡⁤  For the second copy:
+                                                       h0=[                # ‎⁢⁢⁡    If the codepoint is zero:
+                                                           '.              # ‎⁢⁢⁢      Replace it with a period
+                                                              nhO)         # ‎⁢⁢⁣    otherwise replace it with the character it represents
+                                                                  “        # ‎⁢⁢⁤  and concatenate those characters.
+                                                                   ð$+     # ‎⁢⁣⁡  Prepend another space to the characters.
+                                                                      W '  # ‎⁢⁣⁢Join each row by spaces, and join those rows by newlines.
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.12/" rel="nofollow noreferrer">Python 3.12</a>, <s> 336 </s> <s> 288 </s> <s> 240 </s> <s> 224 </s> <s> 112 </s> <s> 109 </s> 107 bytes</h1>
 <p><em>-48 bytes by using <code>bytes.hex()</code>.</em><br />
 <em>-48 bytes by using <code>str.replace()</code> instead of a list comprehension.</em><br />
 <em>-16 bytes by redoing the valid half of revision 4.</em><br />
@@ -48,7 +84,7 @@
 </code></pre>
 <p>Try It Online doesn't support Python 3.12.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 80 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 80 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>000000000000&quot;D34çý16ôε00N„0:««žĆySk₁+h€¦`õ)À}»&quot;D34çý16ôε00N„0:««žĆySk₁+h€¦`õ)À}»
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/fAAkouRibHF5@eK@h2eEt57YaGPg9aphnYHVo9aHVR/cdaasMzn7U1Kid8ahpzaFlCYe3ah5uqD20mxw9//8DAA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -94,7 +130,7 @@
 <p>The <code>₁+</code> and <code>€¦</code> are unfortunately necessary for the <code>ε</code>, which has 05AB1E codepoint <code>6</code> in hexadecimal, which should be formatted as <code>06</code>.</p>
 <p>The shorter version replaces the <code>ðýR47jR</code> with <code><span class="math-container">`</span></code>, and has more leading 0s to make the length a multiple of 16.</p>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6) <s>229</s> <s>219</s> 162 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES6) <s>229</s> <s>219</s> 162 bytes</h1>
 
 <p><i>Thanks to @Neil for saving a lot of bytes</i></p>
 
@@ -128,7 +164,7 @@
 0090: 31 36 2c 31 36 29 29 2e 6a 6f 69 6e 60 5c 6e 60 16,16)).join`\n`                                     
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Perl, 81 bytes</h1>
+<div id="pu4" class="pu"><h1>Perl, 81 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>#!perl -l
 $_=q($%+=print&quot;00$%0: @{[unpack'(H2)*']}  $_&quot;for&quot;\$_=q($_);eval&quot;=~/.{16}/g);eval
@@ -143,7 +179,7 @@ $_=q($%+=print&quot;00$%0: @{[unpack'(H2)*']}  $_&quot;for&quot;\$_=q($_);eval&q
 </code></pre>
 <p><a href="https://tio.run/nexus/perl#@68Sb1uooaKqbVtQlJlXomRgoKJqYKXgUB1dmleQmJytruFhpKmlHluroKASr5SWX6QUA9ERr2mdWpaYo2Rbp69XbWhWq58OEfj//79uDgA" rel="noreferrer" title="Perl – TIO Nexus">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h2>Ruby, <s>128</s> 112 bytes</h2>
+<div id="pu5" class="pu"><h2>Ruby, <s>128</s> 112 bytes</h2>
 <pre><code>eval b='7.times{|y|$&gt;&lt;&lt;&quot;%04x:&quot;%y*=16;c=(&quot;eval b=&quot;+(a=39.chr)+b+a)[y,16];c.chars{|x|$&gt;&lt;&lt;&quot; %x&quot;%x.ord};puts&quot;  &quot;+c}'
 </code></pre>
 <p>Without trailing newline.</p>
@@ -158,7 +194,7 @@ $_=q($%+=print&quot;00$%0: @{[unpack'(H2)*']}  $_&quot;for&quot;\$_=q($_);eval&q
 0060: 72 64 7d 3b 70 75 74 73 22 20 20 22 2b 63 7d 27  rd};puts&quot;  &quot;+c}'
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/DJMcMayhem/V" rel="nofollow noreferrer">V</a>, 39 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/DJMcMayhem/V" rel="nofollow noreferrer">V</a>, 39 bytes</h1>
 
 <pre><code>ñi&#22;241&#27;"qp:%!xxd
 Î4x
@@ -173,7 +209,7 @@ f&amp;3i ÿ
 
 <p>This is pretty much just a modification of the <a href="https://codegolf.stackexchange.com/a/100426/31716">V-quine template</a> I wrote about.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.perl.org/" rel="noreferrer">Perl</a> + xxd + cut, 61 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.perl.org/" rel="noreferrer">Perl</a> + xxd + cut, 61 bytes</h1>
 <pre class="lang-perl prettyprint-override"><code>$_=q(open F,&quot;|xxd -g1|cut -c5-&quot;;print F&quot;\$_=q($_);eval&quot;);eval
 </code></pre>
 <p><a href="https://tio.run/nexus/perl#@68Sb1uokV@QmqfgpqNUU1GRoqCbbliTXFqioJtsqqtkXVCUmVei4KYUA1aoEq9pnVqWmKMEof7/BwA" rel="noreferrer" title="Perl – TIO Nexus">Try it online!</a></p>
