--- a/q/89621.html
+++ b/q/89621.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>UiuaSBCS</td><td>240921T180003Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/275678#275678">Europe20</a></td></tr>
+<tr d-ix="0"><td>008</td><td>UiuaSBCS</td><td>240921T180003Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/275678#275678">Europe20</a></td></tr>
 <tr d-ix="1"><td>007</td><td>Japt</td><td>240919T140751Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/275641#275641">Shaggy</a></td></tr>
 <tr d-ix="2"><td>116</td><td>Rust</td><td>240919T083825Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/275635#275635">bzr</a></td></tr>
 <tr d-ix="3"><td>004</td><td>05AB1E</td><td>210216T231001Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/219199#219199">Makonede</a></td></tr>
@@ -92,16 +92,15 @@
 <tr d-ix="63"><td>018</td><td>J</td><td>160812T125042Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/89632#89632">Leaky Nu</a></td></tr>
 <tr d-ix="64"><td>072</td><td>Python 2</td><td>160812T124331Z</td><td><a href="https://codegolf.stackexchange.com/questions/89621/random-golf-of-the-day-7-a-distinctly-random-character/89627#89627">atlasolo</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Sep-12" rel="nofollow noreferrer">SBCS</a></sup>, 9 bytes</h1>
-<pre><code>+@a⌊√⚂₆₇₆
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Sep-12" rel="nofollow noreferrer">SBCS</a></sup>, <s>9</s> 8 bytes</h1>
+<pre><code>+@a√⚂₆₇₆
 </code></pre>
-<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__IyBFeHBlcmltZW50YWwhCitAYeKMiuKImuKaguKChuKCh-KChgo=" rel="nofollow noreferrer">Try it here!</a></p>
+<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__IyBFeHBlcmltZW50YWwhCitAYeKImuKaguKChuKCh-KChgo=" rel="nofollow noreferrer">Try it here!</a></p>
 <h2>Explanation</h2>
-<pre><code>+@a⌊√⚂₆₇₆
-     ⚂₆₇₆ random number in the range [0, 676)
-    √     square root
-   ⌊      floor
-+@a       to letter
+<pre><code>+@a√⚂₆₇₆
+    ⚂₆₇₆ random number in the range [0, 676)
+   √     square root
++@a      to letter
 </code></pre>
 <h2>Probabilities</h2>
 <pre class="lang-python prettyprint-override"><code>P(a) =  1/676 ≈ 0.001479
