--- a/q/275590.html
+++ b/q/275590.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>196</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
+<tr d-ix="0"><td>197</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
 <tr d-ix="1"><td>343</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
 <tr d-ix="3"><td>270</td><td>Javascript</td><td>240920T193816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275663#275663">ccprog</a></td></tr>
@@ -36,10 +36,10 @@
 <tr d-ix="7"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="8"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>C (GCC) using OSS, <s>201</s> 196 bytes</h1>
-<pre><code>c;n;;i;A;a;f(){open(&quot;/dev/dsp&quot;,1);for(c=0;c&lt;8;++c)for(n=0;n&lt;32;n++)for(k=n&gt;16?32-n:n,i=1500;i--;)A=(a+=901*exp2(k/4+(&quot;047;02470237&quot;[k%4+(5732&gt;&gt;c*2&amp;12)]-&quot;03037542&quot;[c]+4)/12.))&gt;&gt;9,write(3,&amp;A,1);}
+<div id="pu0" class="pu"><h1>C (GCC) using OSS, <s>201</s> 197 bytes</h1>
+<pre><code>c;n;k;i;A;a;f(){open(&quot;/dev/dsp&quot;,1);for(c=0;c&lt;8;++c)for(n=0;n&lt;32;n++)for(k=n&gt;16?32-n:n,i=1500;i--;)A=(a+=901*exp2(k/4+(&quot;047;02470237&quot;[k%4+(5732&gt;&gt;c*2&amp;12)]-&quot;03037542&quot;[c]+4)/12.))&gt;&gt;9,write(3,&amp;A,1);}
 </code></pre>
-<p>The score includes 3 bytes for the <code>-lm</code> compiler flag. It runs on any UNIX system with support for the Open Sound System (OSS), or any other sound system that provides compatibility with OSS. On modern Linux, you might have to <code>modload snd_pcm_oss</code> if this is not done automatically already.</p>
+<p>The score includes 3 bytes for the <code>-lm</code> compiler flag. It runs on any UNIX system with support for the Open Sound System (OSS), or any other sound system that provides compatibility with OSS. On modern Linux, you might have to <code>modload snd_pcm_oss</code> if this is not done automatically already. If you compile with GCC 14 or later, you might need to pass the <code>-std=gnu98</code> flag, but earlier versions don't need it.</p>
 <p>The code opens /dev/dsp, which by default accepts 8-bit, unsigned, 8 kHz audio. It has three nested loops:</p>
 <ul>
 <li>Outer loop for each chord</li>
@@ -50,7 +50,7 @@
 <ul>
 <li><code>5732</code> is 8 2-bit values storing which type of chord to play (major seventh, major and minor)</li>
 <li><code>&quot;047;02470237&quot;</code> stores the notes of each of the three chord types</li>
-<li><code>&quot;03037542&quot;</code> stores the first note of the start of each up-down arpeggio, inverted (higher ASCII code means lower note), as it will be subtracted from the previous table values</li>
+<li><code>&quot;03037542&quot;</code> stores the first note of the start of each up-down arpeggio, inverted (higher ASCII code means lower note), as it will be subtracted from the previous table's values</li>
 </ul>
 <p>It then calculates the change in phase per sample for the waveform at that frequency in fixed point format, and adds it to the phase accumulator  <code>a</code>. This is then converted to a byte to be send straight to the audio device, thus generating a sawtooth wave with the right frequency.</p>
 </div>
