--- a/q/275590.html
+++ b/q/275590.html
@@ -26,17 +26,43 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>177</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
-<tr d-ix="1"><td>343</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
-<tr d-ix="2"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
-<tr d-ix="3"><td>270</td><td>Javascript</td><td>240920T193816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275663#275663">ccprog</a></td></tr>
-<tr d-ix="4"><td>280</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
-<tr d-ix="5"><td>323</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
+<tr d-ix="0"><td>320</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
+<tr d-ix="1"><td>177</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
+<tr d-ix="2"><td>343</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
+<tr d-ix="3"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
+<tr d-ix="4"><td>270</td><td>Javascript</td><td>240920T193816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275663#275663">ccprog</a></td></tr>
+<tr d-ix="5"><td>280</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
 <tr d-ix="6"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
 <tr d-ix="7"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="8"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>C (GCC) using OSS, <s>201</s> <s>197</s> 177 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript, 320 bytes</h1>
+<p>I don't golf with JavaScript much so I'm sure there's a lot of opportunities for golfing here. Should work on most browsers.</p>
+<pre class="lang-js prettyprint-override"><code>x=&gt;{a=new AudioContext
+with(a.createOscillator()){[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;frequency.setValueAtTime(440*2**(s-1.75),(t*32+i)*.19)
+for(i=0;i&lt;32;i++)p(i&lt;17?c[i%4]/12+(i/4|0):c[3-(i-1)%4]/12+((32-i)/4|0))})
+connect(a.destination)
+start()
+stop(48.64)}}
+</code></pre>
+<p>-3 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">Neil</a></p>
+<h2>Try it</h2>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-js lang-js prettyprint-override"><code>f =
+
+x=&gt;{a=new AudioContext
+with(a.createOscillator()){[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;frequency.setValueAtTime(440*2**(s-1.75),(t*32+i)*.19)
+for(i=0;i&lt;32;i++)p(i&lt;17?c[i%4]/12+(i/4|0):c[3-(i-1)%4]/12+((32-i)/4|0))})
+connect(a.destination)
+start()
+stop(48.64)}}</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;button type="button" onclick="f()"&gt;Play (Warning: Loud)&lt;/button&gt;</code></pre>
+</div>
+</div>
+</p>
+</div>
+<div id="pu1" class="pu"><h1>C (GCC) using OSS, <s>201</s> <s>197</s> 177 bytes</h1>
 <pre><code>c;n;i;a;main(){for(open(&quot;/dev/dsp&quot;,1);write(3,&amp;n,1);n=(a+=901*exp2(n/4+(&quot;047;02470237&quot;[n%4+(5732&gt;&gt;c*2&amp;12)]-&quot;03037542&quot;[c]+4)/12.))&gt;&gt;9)n=i++/1500,c=n/32%8,n%=32,n=n&gt;16?32-n:n;}
 </code></pre>
 <p>The score includes 3 bytes for the <code>-lm</code> compiler flag. It runs on any UNIX system with support for the Open Sound System (OSS), or any other sound system that provides compatibility with OSS. On modern Linux, you might have to <code>sudo modprobe snd_pcm_oss</code> if this is not done automatically already. If you compile with GCC 14 or later, you might need to pass the <code>-std=gnu89</code> flag, but earlier versions don't need it.</p>
@@ -56,7 +82,7 @@
 <p>It then calculates the change in phase per sample for the waveform at that frequency in fixed point format, and adds it to the phase accumulator  <code>a</code>. This is then converted to a byte to be send straight to the audio device, thus generating a sawtooth wave with the right frequency.</p>
 <p>This version loops (for at least six days).</p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript, 343 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript, 343 bytes</h1>
 <p>I used an array containing as many elements as there are notes to play, making sure that each element can be represented by a single hexadecimal character.</p>
 <p>This character represents a number of semitones of difference between this note and the previous note (except for the first element which is played as is)</p>
 <p>I then realized that some big chunks were repeated (those corresponding to the arpeggios in add2 and Maj7) and that I could factorize these portions of code</p>
@@ -75,7 +101,7 @@ stop(48.64)}}</code></pre>
 </div>
 </p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="nofollow noreferrer">CP-1610</a> machine code, 125 DECLEs<sup>1</sup>=156.25 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="nofollow noreferrer">CP-1610</a> machine code, 125 DECLEs<sup>1</sup>=156.25 bytes</h1>
 <p><em><sup>1. CP-1610 instructions are encoded with 10-bit values (0x000 to 0x3FF), known as DECLEs. Although the Intellivision is also able to work on 16-bit data, programs were really stored in 10-bit ROM back then.</sup></em></p>
 <p>A fantasy console?!? Let's do it on a real one!</p>
 <p>This code is meant to be run on a PAL Intellivision (50Hz). It would also work on an NTSC system (60Hz), but at a different pitch and speed.</p>
@@ -223,7 +249,7 @@ stop(48.64)}}</code></pre>
 </ul>
 <p>The actual delta values are obtained by subtracting 5 to the stored values.</p>
 </div>
-<div id="pu3" class="pu"><h1>Javascript, 270 bytes</h1>
+<div id="pu4" class="pu"><h1>Javascript, 270 bytes</h1>
 <pre><code>x=&gt;{a=new AudioContext
 with(a.createOscillator()){
 for(i=0;i&lt;256;i++){n=[60,49,60,49,32,40,46,54][i&gt;&gt;5]
@@ -293,7 +319,7 @@ stop(48)}}</code></pre>
 </div>
 </p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> <sub><s>303</s></sub> 280 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> <sub><s>303</s></sub> 280 bytes</h1>
 <pre class="lang-basic prettyprint-override"><code>data 0,2,4,7,-3,-1,0,4,0,2,4,7,-3,-1,0,4,-7,-5,-3,0,-5,-3,-1,2,-4,0,3,7,-2,2,5,9
 dim a(4),m(16):for k=0to 7:for i=1to 4:read a(i):next
 for i=0to 3:for j=1to 4:f=440*2^(((a(j)+12*i)-21)/12):m(j+4*i)=f:s(f):next:next
@@ -327,32 +353,6 @@ sub s(n)
 return
 </code></pre>
 <p><sub><s><a href="https://github.com/roblogic/golf/blob/46d9ed8a30eaa2785bd216b5188800784a5be9eb/basic/275590-play-the-final-fantasy-prelude.bas" rel="nofollow noreferrer">677 bytes</a></s> <em>: I am sure there is a better way of coding this ...</em></sub></p>
-</div>
-<div id="pu5" class="pu"><h1>JavaScript, 323 bytes</h1>
-<p>I don't golf with JavaScript much so I'm sure there's a lot of opportunities for golfing here. Should work on most browsers.</p>
-<pre class="lang-js prettyprint-override"><code>x=&gt;{a=new AudioContext
-with(a.createOscillator()){[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;frequency.setValueAtTime(440*2**(s-1.75),(t*32+i)*.19)
-for(i=0;i&lt;32;i++)i&lt;17?p(c[i%4]/12+(i/4|0)):p(c[3-(i-1)%4]/12+((32-i)/4|0))})
-connect(a.destination)
-start()
-stop(48.64)}}
-</code></pre>
-<p>-3 bytes thanks to <a href="https://codegolf.stackexchange.com/users/17602/neil">Neil</a></p>
-<h2>Try it</h2>
-<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-js lang-js prettyprint-override"><code>f =
-
-x=&gt;{a=new AudioContext
-with(a.createOscillator()){[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;frequency.setValueAtTime(440*2**(s-1.75),(t*32+i)*.19)
-for(i=0;i&lt;32;i++)i&lt;17?p(c[i%4]/12+(i/4|0)):p(c[3-(i-1)%4]/12+((32-i)/4|0))})
-connect(a.destination)
-start()
-stop(48.64)}}</code></pre>
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;button type="button" onclick="f()"&gt;Play (Warning: Loud)&lt;/button&gt;</code></pre>
-</div>
-</div>
-</p>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), <s>78</s> 77 bytes</h1>
 <pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKeK1X&quot;tP[AaABOlHN]0Y(_&amp;vhYs&quot;1875:YPE*76/@12/W*Y,E]&amp;h1e4Y#
